--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -4,7 +4,7 @@
     "DASHBOARD": {
         "_title": "YUMKET is out! See what's new",
         "_header": "YUMKET: Cloud & Edge Services you can Trust",
-        "_subheader": "Welcome to the first open distributed marketplace ecosystem for cloud, edge & AI services in Europe.",
+        "_subheader": "Welcome to the first open distributed marketplace ecosystem for cloud, edge & AI services in Europe",
         "_new": "New",
         "_learn_more": "Learn more",
         "_video": "Watch video",
@@ -76,7 +76,7 @@
             "_search_title": "Search and Explore",
             "_search_desc": "Use our intuitive search to find the services that match your digital transformation needs.",
             "_compare_title": "Compare and Decide",
-            "_compare_desc": "Evaluate services based on features, compliance and reviews to make informed choices.",
+            "_compare_desc": "Evaluate services based on features, EU compliance and reviews to make informed choices.",
             "_seamless_title": "Seamless Integration",
             "_seamless_desc": "Follow our easy process to integrate and deploy your chosen services swiftly.",
             "_join": "Join as customer",
@@ -87,7 +87,7 @@
             "_title": "For providers",
             "_subtitle": "Connect and Grow",
             "_register_title": "Register Your Service",
-            "_register_desc": "Sign up and submit your service for validation, ensuring compliance and quality.",
+            "_register_desc": "Sign up and submit your european service for validation, ensuring compliance and quality.",
             "_verified_title": "Get verified",
             "_verified_desc": "Our team will quickly verify your offerings to ensure they meet Distributed Open Marketplace standards.",
             "_reach_title": "Reach Europe",
@@ -99,7 +99,7 @@
     },
     "EXPLORE": {
         "_title": "Explore the Distributed Open Marketplace Project",
-        "_subtitle": "Whether you're seeking in-depth reports, latest updates or upcoming events, everything ou need to know is just a click away.",
+        "_subtitle": "Whether you're seeking in-depth reports, latest updates or upcoming events, everything ou need to know is just a click away",
         "_events_title": "Events and Webinars",
         "_events_desc": "Join us at our next event or webinar to connect with fellow innovators, learn from industry leaders and discover new opportunities within the 'DOME' Project's ecosystem.",
         "_updates_title": "Latest Updates and News",
