ADD cookies policy

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,6 +154,7 @@
     "FOOTER": {
         "_about": "About",
         "_privacy": "Privacy Policy",
+        "_cookies": "Cookies Policy",
         "_licensing": "Terms of Use",
         "_contact": "Contact",
         "_rights": "All Rights Reserved"
