ADD change how it works section style

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,7 +81,8 @@
             "_seamless_desc": "Follow our easy process to integrate and deploy your chosen services swiftly.",
             "_join": "Join as customer",
             "_explore": "Explore the catalogue",
-            "_contact": "Contact us"
+            "_contact": "Contact us",
+            "_description": "The marketplace is actually free to browse. Take a look at the catalogue contents, search for the services you need, verify the different offerings, get in touch with the service providers to better understand the proposal and acquire the desired service."
         },
         "PROVIDERS": {
             "_title": "For providers",
@@ -94,7 +95,10 @@
             "_reach_desc": "Once verified, your services will be accessible to a wide European audience, ready to grow your business.",
             "_join": "Join as provider",
             "_onboard": "Onboard the marketplace",
-            "_contact": "Contact us"
+            "_contact": "Contact us",
+            "_description_start": "Qualify you company through the reference",
+            "_link": "Company Onboarding process",
+            "_description_end": "and then start describing your offerings through the Offering qualification process and star being visible on the market inside this trustable catalogue."
         }
     },
     "EXPLORE": {
