--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -421,7 +421,9 @@
         "_profile_pic": "Profile picture",
         "_finish": "Finish",
         "_summary": "Product's summary",
-        "_create_prod": "Create product"
+        "_create_prod": "Create product",
+        "_file_res": "File restrictions",
+        "_restrictions": "File size must be under 3MB. File names can only include alphabetical characters (A-Z, a-z) and a limited set of symbols, such as underscores (_), hyphens (-), and periods (.). "
     },
     "UPDATE_PROD_SPEC":{
         "_back": "Back",
@@ -492,7 +494,9 @@
         "_verify": "Verify Certificates",
         "_how_to_verify": "How to get a valid VC of the certificate?",
         "_verify_text": "To get a valid VC of the certificate you can access the ",
-        "_dome_trust": "DOME Trust Service Provider for Certification"
+        "_dome_trust": "DOME Trust Service Provider for Certification",
+        "_file_res": "File restrictions",
+        "_restrictions": "File size must be under 3MB. File names can only include characters (a-z), (A-Z), (0-9), and a limited set of symbols including underscores (_), hyphens (-), and periods (.). "
     },
     "CREATE_RES_SPEC": {
         "_back": "Back",
