FIX error when creating price plans with same name + disable markdown buttons when preview is on

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -700,6 +700,7 @@
         "_create_license": "Create license",
         "_price": "Price",
         "_save_price":"Save price",
+        "_duplicated_price_name": "Price name already exists.",
         "_save_license": "Save license",
         "_no_prod_spec": "Bundled offers can't include product specifications.",
         "_cancel": "Cancel",
@@ -796,6 +797,7 @@
         "_create_license": "Create license",
         "_price": "Price",
         "_save_price":"Save price",
+        "_duplicated_price_name": "Price name already exists.",
         "_save_license": "Save license",
         "_no_prod_spec": "Bundled offers can't include product specifications.",
         "_cancel": "Cancel",
