--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,8 +2,8 @@
     "_yes": "Yes",
     "_no": "No",    
     "DASHBOARD": {
-        "_title": "YUMKET is out! See what's new",
-        "_header": "YUMKET: Cloud & Edge Services you can Trust",
+        "_title": "DOME Marketplace is out! See what's new",
+        "_header": "DOME Marketplace: Cloud & Edge Services you can Trust",
         "_subheader": "Welcome to the first open distributed marketplace ecosystem for cloud, edge & AI services in Europe",
         "_new": "New",
         "_learn_more": "Learn more",
@@ -69,7 +69,7 @@
     },
     "HOWITWORKS":{
         "_title": "How It Works",
-        "_subtitle": "Discover how YUMKET connects you to Europe's finest cloud and edge services",
+        "_subtitle": "Discover how DOME Marketplace connects you to Europe's finest cloud and edge services",
         "CUSTOMERS":{
             "_title": "For customers",
             "_subtitle": "Discover",
