--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -293,7 +293,19 @@
         "_services": "Services",
         "_resources": "Resources",
         "_orders": "Orders",
-        "_not_found": "No offers found",
+        "_not_found": "No products found.",
+        "_no_resources": "No resources found.",
+        "_no_services": "No services found.",
+        "_search_criteria": "Search criteria",
+        "_prod_details": "Product details",
+        "_description": "Description",
+        "_pricing": "Product pricing",
+        "_chars": "Product characteristics",
+        "_res_details": "Resource details",
+        "_res_chars": "Resource characteristics",
+        "_serv_details": "Service details",
+        "_serv_chars": "Service characteristics",
+        "_start_date": "Start operating date",
         "_order_id": "Order Id",
         "_state": "State",
         "_priority": "Priority",
