--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -164,7 +164,7 @@
         "_rights": "All Rights Reserved"
     },
     "HEADER": {
-        "_marketplace": "MARKETPLACE",
+        "_marketplace": "DOME MARKETPLACE",
         "_open_menu": "Open main menu",
         "_home": "Home",
         "_catalogs": "Catalogues",
