ADD seller orders

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -863,6 +863,7 @@
         "_filter_role": "Filter by role",
         "_seller": "Seller",
         "_owner": "Owner",
+        "_customer": "Customer",
         "_role": "Role"
     },
     "ADMIN":{
