ADD contact-us new form + fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -192,8 +192,8 @@
         "_register": "Register",
         "_guidelines": "Guidelines",
         "_onboarding": "Onboarding",    
-        "_about": "About DOME",
-        "_verify": "Verify and publish",
+        "_about": "About",
+        "_verify": "Publish your offering",
         "_info": "Info"
     },
     "PRODUCT_DETAILS": {
