FIX Ticket#83537 Preview of Description on Update catalogue buttons work not correctly

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
     "DASHBOARD": {
         "_title": "DOME Marketplace is out! See what's new",
         "_header": "Digital Trust to move forward",
-        "_subheader": "Join the first open distributed marketplace ecosystem for cloud, edge & AI services in europe.",
+        "_subheader": "Join the first open distributed marketplace ecosystem for cloud, edge & AI services in Europe.",
         "_new": "New",
         "_learn_more": "Learn more",
         "_video": "Watch video",
