FIX contact us form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -188,7 +188,7 @@
         "_ticketing": "Ticketing System",
         "_change_session": "Change session",
         "_admin": "Administration",
-        "_publish": "Publish your service",
+        "_publish": "Publish your offerings",
         "_register": "Register",
         "_guidelines": "Guidelines",
         "_onboarding": "Onboarding",    
