ADD close button to details modal + FIX header card's style + ADD register 3 links dropdown + ADD change landing offerings style

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -191,8 +191,10 @@
         "_admin": "Administration",
         "_publish": "Publish your offerings",
         "_register": "Register",
-        "_guidelines": "Guidelines",
+        "_guidelines": "Guidelines to register",
+        "_guideline_publish": "Guideline to publish",
         "_onboarding": "Onboarding",
+        "_registration": "Registration form",
         "_about": "About",
         "_verify": "Publish your offering",
         "_info": "Info",
