--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -967,24 +967,47 @@
         "_details": "Organization details",
         "_description": "Description"
     },
-        "PRODUCT_ORDERS": {
-            "_orders": "Product Orders",
-            "_invoices": "Invoices",
-            "_no_orders": "No orders found.",
-            "_search_criteria": "Search criteria",
-            "_order_id": "Order Id",
-            "_status": "Choose a status",
-            "_priority": "Priority",
-            "_desc": "Description",
-            "_price": "Price",
-            "_bill": "Billing address",
-            "_filter_state": "Filter by status",
-            "_acknowledged": "Acknowledged",
-            "_in_progress": "In Progress",
-            "_completed": "Completed",
-            "_failed": "Failed",
-            "_pending": "Pending",
-            "_cancelled": "Cancelled"
+    "PRODUCT_ORDERS": {
+        "_orders": "Product Orders",
+        "_invoices": "Invoices",
+        "_no_orders": "No orders found.",
+        "_search_criteria": "Search criteria",
+        "_order_id": "Order Id",
+        "_status": "Choose a status",
+        "_priority": "Priority",
+        "_desc": "Description",
+        "_price": "Price",
+        "_bill": "Billing address",
+        "_filter_state": "Filter by status",
+        "_acknowledged": "Acknowledged",
+        "_in_progress": "In Progress",
+        "_completed": "Completed",
+        "_failed": "Failed",
+        "_pending": "Pending",
+        "_cancelled": "Cancelled"
 
-        }
+    },
+  "FORMS": {
+    "PRICE_PLANS": {
+      "_price_plans": "Price Plans",
+      "_add": "Add new Price Plans",
+      "_name": "Name",
+      "_description": "Description",
+      "_online_payment": "Online Payment",
+      "_online_payment_long": "Is this product to be paid online?",
+      "_actions": "Actions",
+      "_no_price_plans": "This offer has no Price Plans at this moment.",
+      "_sure_delete": "Are you sure you want to delete this Price Plan?",
+      "_cant_be_undone": "This action can't be undone",
+      "_cancel": "Cancel",
+      "_delete": "Delete",
+      "_save": "Save",
+      "_edit_price_plan": "Edit Price Plan",
+      "_new_price_plan": "Create a Price Plan",
+      "_config_profile": "Configuration Profile",
+      "_price_components": "Price components",
+      "_add_price_component": "Add a new Price Component",
+      "_currency": "Currency"
+    }
+  }
 }
