ADD product characteristics on price components + check if profile and chars set updates validation + ADD recurring-prepaid

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -989,7 +989,8 @@
     },
   "FORMS": {
     "PRICE_PLANS": {
-      "_price_plans": "Price Plans"
+      "_price_plans": "Price Plans",
+      "_price_comp_with_chars": "If you want this price plan to apply exclusively to a specific product configuration, remove the selected characteristics from the created price components."
     }
   }
 }
