FIXES steps on offer creatiion, ADDS support for stagged edition

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -988,6 +988,12 @@
 
     },
   "FORMS": {
+    "PROCUREMENT_MODE": {
+      "_title": "Select Procurement Mode",
+      "_manual": "Manual",
+      "_automatic": "Automatic",
+      "_payment_automatic": "Payment Automatic - Procurement Manual"
+    },
     "PRICE_PLANS": {
       "_price_plans": "Price Plans",
       "_add": "Add new Price Plans",
