ADD Ticket#831624 + Task 69 + i18n

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -190,6 +190,7 @@
         "_change_session": "Change session",
         "_admin": "Administration",
         "_publish": "Publish your offerings",
+        "_register_here": "Register here",
         "_register": "Register",
         "_guidelines": "Guidelines to register",
         "_guideline_publish": "Guideline to publish",
