--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -324,6 +324,7 @@
         "_start_date": "Start operating date",
         "_order_id": "Order Id",
         "_state": "State",
+        "_status": "Status",
         "_priority": "Priority",
         "_desc": "Description",
         "_price": "Price",
@@ -989,11 +990,11 @@
     },
   "FORMS": {
     "PROCUREMENT_MODE": {
-      "_title": "Select Procurement Mode",
-      "_manual": "Manual",
-      "_automatic": "Automatic",
-      "_payment_automatic": "Payment Automatic - Procurement Manual"
-    },
+        "_title": "Select Procurement Mode",
+        "_manual": "Manual",
+        "_automatic": "Automatic",
+        "_payment_automatic": "Payment Automatic - Procurement Manual"
+      },
     "PRICE_PLANS": {
       "_price_plans": "Price Plans",
       "_add": "Add new Price Plans",
