--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -985,7 +985,8 @@
         "_completed": "Completed",
         "_failed": "Failed",
         "_pending": "Pending",
-        "_cancelled": "Cancelled"
+        "_cancelled": "Cancelled",
+        "_unchecked": "Unchecked"
 
     },
   "FORMS": {
