--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -285,6 +285,7 @@
         "_birthdate": "Birthdate",
         "_date": "Date",
         "_country": "Country",
+        "_did": "DID",
         "_city": "City",
         "_mybills": "My billing addresses",
         "_user_id": "User id",
